# data_retrieval_system

./: .env  .env.example  .replit  ANALYSIS_GUIDE.md  FBI_QUERY_GUIDE.md  PACKAGE_README.md  README.md  STORED_QUERIES_GUIDE.md  SUMMARY.md  add_analyzer_plans.py  add_connectors.py  add_fbi_queries.py  add_nass_queries.py  analysis_example.py  config.py  execute_analysis_plan.py  execute_query.py  fetch_agencies.py  package-lock.json  package.json  pyproject.toml  python_src_changes.patch  query_fbi.py  replit.md  requirements.txt
api/: routes.py
client/: index.html
client/src/: App.tsx  index.css
connectors/census/: connector.py
connectors/fbi_crime/: connector.py
core/: analysis_plan_manager.py  analysis_plotter.py  cache_manager.py  data_analysis.py  query_engine.py
models/: analysis_plan.py  joined_query.py  query_column_cache.py  query_result.py
python_src/: analyze_data.py  execute_analysis_plan.py  execute_query.py  get_query_columns.py  json_execute_query.py  manage_analysis_plan.py  preview_joined_data.py  run_query.py  server_execute_query.py
python_src/core/: cache_manager.py  (+2 more)
python_src_old/: get_cache_stats.py  validate_connector.py
server/: mongodb.ts  routes.ts  storage.ts
shared/: schema.ts
tests/: test_analysis_plan_manager.py  test_analysis_plotter.py  test_api_routes.py  test_census_attribute_repository.py  test_census_post_processing.py  test_data_analysis_engine.py  test_fetch_agencies_normalization.py  test_query_engine_analysis.py  test_query_engine_dynamic_parameters.py  test_query_result_cache_limits.py  test_run_query_cli.py
(+19 files in other folders)
